Inital scaffold for libprocessing ffi.